// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resultsBox should render without errors ResultsBody 1`] = `
<React.Fragment>
  <FilmsList />
</React.Fragment>
`;

exports[`resultsBox should render without errors ResultsBody 2`] = `
<React.Fragment>
  <ResultsBody />
</React.Fragment>
`;

exports[`resultsBox should render without errors ResultsBodyItem 1`] = `
<li>
  <img />
  <div
    className="col-50"
  >
    <p
      className="title"
    />
    <p
      className="genre"
    />
  </div>
  <div
    className="col-50 text-align-right"
  >
    <span
      className="release-date"
    />
  </div>
</li>
`;
